--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,8 +8,8 @@
 <body>
     <h1>Login</h1>
 
-    <form action="" method="post">
-        <input type="email" name="email" placeholder="Email" required><br>
+    <form action="/user/login" method="post">
+        <input type="text" name="username" placeholder="username" required><br>
         <input type="password" name="password" placeholder="Password" required><br>
         <button type="submit">Login</button>
     </form>
