--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,9 +9,9 @@
     <h1>Register</h1>
 
     <form action="/user/register" method="post">
-        <input type="text" name="name" placeholder="userName" required><br>
-        <input type="email" name="email" placeholder="userEmail" required><br>
-        <input type="password" name="password" placeholder="userPassword" required><br>
+        <input type="text" name="username" placeholder="userName" required><br>
+        <input type="email" name="useremail" placeholder="userEmail" required><br>
+        <input type="password" name="userpassword" placeholder="userPassword" required><br>
         <button type="submit">Register</button>
     </form>
 </body>
